@@ -119,7 +119,6 @@
                             android:layout_height="150dp"
                             android:layout_width="150dp"
                             android:padding="4dp"
-                            android:background="@drawable/ic_cancel_dark"
                             android:minHeight="150dp" android:minWidth="150dp"
                             android:scaleType="fitXY" android:adjustViewBounds="false"
                             android:maxWidth="150dp" android:maxHeight="150dp"
@@ -130,7 +129,6 @@
                             android:layout_height="150dp"
                             android:layout_width="150dp"
                             android:padding="4dp"
-                            android:background="@drawable/ic_cancel_dark"
                             android:minHeight="150dp" android:minWidth="150dp"
                             android:scaleType="fitXY" android:adjustViewBounds="false"
                             android:maxWidth="150dp" android:maxHeight="150dp"
@@ -141,7 +139,6 @@
                             android:layout_height="150dp"
                             android:layout_width="150dp"
                             android:padding="4dp"
-                            android:background="@drawable/ic_cancel_dark"
                             android:minHeight="150dp" android:minWidth="150dp"
                             android:scaleType="fitXY" android:adjustViewBounds="false"
                             android:maxWidth="150dp" android:maxHeight="150dp"
@@ -152,7 +149,6 @@
                             android:layout_height="150dp"
                             android:layout_width="150dp"
                             android:padding="4dp"
-                            android:background="@drawable/ic_cancel_dark"
                             android:minHeight="150dp" android:minWidth="150dp"
                             android:scaleType="fitXY" android:adjustViewBounds="false"
                             android:maxWidth="150dp" android:maxHeight="150dp"
